--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="input_hint">Enter number</string>
     <string name="drop_down_description">currency</string>
     <string name="change_currency">change_currency</string>
+    <string name="label_uah">UAH</string>
 </resources>
